--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ biblio-style: apalike
 
 ## Пререквезиты
 
-Мы будем использовать R [@r_core_team19], так что для двух ближайших занятий понадобятся:
+Мы будем использовать R, так что для двух ближайших занятий понадобятся:
 
 * R
     * [на Windows](https://cran.r-project.org/bin/windows/base/)
