--- a/01_intro_to_R.Rmd
+++ b/01_intro_to_R.Rmd
@@ -231,7 +231,7 @@ df %>%
 ```
 
 ```{block, type = "rmdtask"}
-Узнайте в каком из кладбищей больше стела с саркофагом (переменная `tombstone_type` значение `L`).
+Узнайте в каком из кладбищ больше стел с саркофагом (переменная `tombstone_type` значение `L`).
 ```
 
 #### `filter()`
